暂存 主界面-曲线Tag 1.底部坐标轴可更换成时、天、月 2.坐标轴值范围可自定义

--- a/RD3/Lang/Lang.en-US.xaml
+++ b/RD3/Lang/Lang.en-US.xaml
@@ -109,4 +109,5 @@
     <system:String x:Key="Audit">Audit</system:String>
     <system:String x:Key=" Do as unscheduled action">Do as unscheduled action</system:String>
     <system:String x:Key="Add Liquid">Add Liquid</system:String>
+    <system:String x:Key="Load Setting">Load Setting</system:String>
 </ResourceDictionary>
