--- a/RD3/Themes/Converters.xaml
+++ b/RD3/Themes/Converters.xaml
@@ -9,4 +9,5 @@
     <rd3:StatusToColorConverter x:Key="StatusToColorConverter" />
     <rd3:StringToBoolConverter x:Key="StringToBoolConverter" />
     <rd3:EnumToVisibilityConverter x:Key="EnumToVisibilityConverter" />
+    <rd3:NumberToSpecialStringConverter x:Key="NumberToSpecialStringConverter" />
 </ResourceDictionary>
